# cmake

./: CMakeLists.txt  compile.sh
cmake/: FindHello.cmake  FindSDL2.cmake
dependency/: CMakeLists.txt  cube.cpp  square.cpp
dependency/cube_header/: cube.hpp
gcc_no_cmake/: test.cpp  test.sh
header-only/: CMakeLists.txt  cat.hpp
hello-util/: CMakeLists.txt  hello.cpp  hello.hpp
src/: CMakeLists.txt  hello_world.cpp  hello_world.hpp  main.cpp
